# Short-URL

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2b9a12d35e08_deflaut_unique.py  735ef05c9a26_first_commit.py  beb20ebc1d9a_first_commit.py
src/: crud.py  generator.py  main.py  schemas.py
src/database/: db_conf.py  models.py
tests/: conftest.py  test_crud.py  test_generator.py  test_main.py
